# SwiftChatSystem

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  develop.md  logs.txt  system.md  vcpkg.json
backend/: CMakeLists.txt
backend/authsvr/: CMakeLists.txt  Dockerfile
backend/authsvr/cmd/: main.cpp
backend/authsvr/internal/config/: config.cpp  config.h
backend/authsvr/internal/handler/: auth_handler.cpp  auth_handler.h
backend/authsvr/internal/service/: auth_service.cpp  auth_service.h  auth_service_test.cpp
backend/authsvr/internal/store/: user_store.cpp  user_store.h  user_store_test.cpp
backend/authsvr/proto/: auth.proto
backend/chatsvr/: CMakeLists.txt  Dockerfile
backend/chatsvr/cmd/: main.cpp
backend/chatsvr/internal/config/: config.cpp  config.h
backend/chatsvr/internal/handler/: chat_handler.cpp  chat_handler.h  group_handler.cpp  group_handler.h
backend/chatsvr/internal/service/: chat_service.cpp  chat_service.h  chat_service_test.cpp  group_service.cpp  group_service.h
backend/chatsvr/internal/store/: group_store.cpp  group_store.h  message_store.cpp  message_store.h  message_store_test.cpp
backend/chatsvr/proto/: chat.proto  group.proto
backend/common/: CMakeLists.txt
backend/common/include/swift/: async_write.h  chat_type.h  common.h  config.h  config_loader.h  error_code.h  grpc_auth.h  jwt_helper.h  log_helper.h  result.h  utils.h
backend/common/proto/: CMakeLists.txt  common.proto
backend/common/src/: async_write.cpp  config.cpp  config_loader.cpp  grpc_auth.cpp  jwt_helper.cpp  utils.cpp
backend/common/tests/: test_utils.cpp
backend/filesvr/: CMakeLists.txt  Dockerfile
backend/filesvr/cmd/: main.cpp
backend/filesvr/internal/config/: config.cpp  config.h
backend/filesvr/internal/handler/: file_handler.cpp  file_handler.h
backend/filesvr/internal/service/: file_service.cpp  file_service.h  file_service_test.cpp
backend/filesvr/internal/store/: file_store.cpp  file_store.h  file_store_test.cpp
backend/filesvr/proto/: file.proto
backend/friendsvr/: CMakeLists.txt  Dockerfile
backend/friendsvr/cmd/: main.cpp
backend/friendsvr/internal/config/: config.cpp  config.h
backend/friendsvr/internal/handler/: friend_handler.cpp  friend_handler.h
backend/friendsvr/internal/service/: friend_service.cpp  friend_service.h  friend_service_test.cpp
backend/friendsvr/internal/store/: friend_store.cpp  friend_store.h  friend_store_test.cpp
backend/friendsvr/proto/: friend.proto
backend/gatesvr/: CMakeLists.txt  Dockerfile
backend/gatesvr/cmd/: main.cpp
backend/gatesvr/internal/config/: config.cpp  config.h
backend/gatesvr/internal/handler/: gate_internal_grpc_handler.cpp  gate_internal_grpc_handler.h  websocket_handler.cpp  websocket_handler.h
backend/gatesvr/internal/rpc/: zone_rpc_client.cpp  zone_rpc_client.h
backend/gatesvr/internal/service/: gate_service.cpp  gate_service.h
backend/gatesvr/internal/websocket/: ws_listener.cpp  ws_listener.h
backend/gatesvr/proto/: gate.proto
backend/onlinesvr/: CMakeLists.txt  Dockerfile
backend/onlinesvr/cmd/: main.cpp
backend/onlinesvr/internal/config/: config.cpp  config.h
backend/onlinesvr/internal/handler/: online_handler.cpp  online_handler.h
backend/onlinesvr/internal/service/: online_service.cpp  online_service.h
backend/onlinesvr/internal/store/: session_store.cpp  session_store.h
backend/onlinesvr/proto/: online.proto
backend/zonesvr/: CMakeLists.txt  Dockerfile
backend/zonesvr/cmd/: main.cpp
backend/zonesvr/internal/config/: config.cpp  config.h
backend/zonesvr/internal/handler/: zone_handler.cpp  zone_handler.h
backend/zonesvr/internal/interceptor/: internal_secret_processor.cpp  internal_secret_processor.h
backend/zonesvr/internal/rpc/: auth_rpc_client.cpp  auth_rpc_client.h  chat_rpc_client.cpp  chat_rpc_client.h  file_rpc_client.cpp  file_rpc_client.h  friend_rpc_client.cpp  friend_rpc_client.h  gate_rpc_client.cpp  gate_rpc_client.h  group_rpc_client.cpp  group_rpc_client.h  online_rpc_client.cpp  online_rpc_client.h  rpc_client_base.cpp  rpc_client_base.h
backend/zonesvr/internal/service/: zone_service.cpp  zone_service.h
backend/zonesvr/internal/store/: session_store.cpp  session_store.h
backend/zonesvr/internal/system/: auth_system.cpp  auth_system.h  base_system.h  chat_system.cpp  chat_system.h  file_system.cpp  file_system.h  friend_system.cpp  friend_system.h  group_system.cpp  group_system.h  system_manager.cpp  system_manager.h
backend/zonesvr/proto/: zone.proto
client/: CMakeLists.txt
client/desktop/: CMakeLists.txt
client/desktop/resources/: resources.qrc
client/desktop/src/: main.cpp
client/desktop/src/models/: conversation.cpp  conversation.h  message.cpp  message.h  user.cpp  user.h
client/desktop/src/network/: app_service.cpp  app_service.h  protocol_handler.cpp  protocol_handler.h  websocket_client.cpp  websocket_client.h
client/desktop/src/swift/: log_helper.h
client/desktop/src/ui/: blacklistdialog.cpp  blacklistdialog.h  chatwidget.cpp  chatwidget.h  contactwidget.cpp  contactwidget.h  filemessageitem.cpp  filemessageitem.h  imagepreviewdialog.cpp  imagepreviewdialog.h  imageviewerdialog.cpp  imageviewerdialog.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h  mentionpopup.cpp  mentionpopup.h  messageitem.cpp  messageitem.h  readreceiptdetaildialog.cpp  readreceiptdetaildialog.h
client/desktop/src/utils/: chat_storage.cpp  chat_storage.h  client_logger.cpp  client_logger.h  image_utils.cpp  image_utils.h  imageloader.cpp  imageloader.h  settings.cpp  settings.h
client/proto/: CMakeLists.txt
component/asynclogger/: CMakeLists.txt
component/asynclogger/include/async_logger/: async_logger.h  log_config.h  log_level.h
component/asynclogger/src/: async_logger.cpp  backend_thread.cpp  backend_thread.h  console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  log_formatter.cpp  log_formatter.h  ring_buffer.cpp  ring_buffer.h  sink.h
config/: README.md  authsvr.conf.example  chatsvr.conf.example  filesvr.conf.example  friendsvr.conf.example  (+3 more)
(+106 files in other folders)
